# refactored_mta

./: .gitignore  README.md  install.py  main.py  pyproject.toml
src/my_packages/apps/: __init__.py  mars.py  mtas.py  nsp.py  remedy.py
src/my_packages/constants_module/: __init__.py  constant_variables.py  urls.py
src/my_packages/docx_module/: __init__.py  create_word_doc.py  update_word_docx.py
src/my_packages/ocr_module/: __init__.py  capture_and_click.py  capture_full_screenshot.py  capture_partial_screenshot.py  click_icon.py  crop_by_index_top_only.py  crop_image_by_index.py  gpu_checkup.py  nsp_extract_sites.py  read_image.py  testing.py
src/my_packages/utils/: __init__.py  delete_images_in_folder.py  get_mdn.py  move_file_by_index.py  open_app.py  select_monitor.py  user_input.py
